# azure-function-eventhub-listener

./: .gitignore  Cargo.toml  host.json
EventHubTrigger1/: function.json
src/: main.rs
