[package]
name = "transaction-drainer-function"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3"
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
simple_logger = "1"
log = "0.4"
serde_json = "1"

azure_cosmos = { version = "0.1.0", git = "https://github.com/Azure/azure-sdk-for-rust" }
azure_core = { version = "0.1.0", git = "https://github.com/Azure/azure-sdk-for-rust" }
